--- a/LocalTwitter/Info.plist
+++ b/LocalTwitter/Info.plist
@@ -68,5 +68,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need this information for a better experience on the app</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need this information for a better experience on the app</string>
 </dict>
 </plist>
